1.19-5.2.5:
- There was still an issue with the shape card not accepting heights more than 256

1.19-5.2.4:
- Update to 1.19.4

1.19.1-5.2.3:
- 1.19.3 compatibility fix in McJtyLib

1.19.1-5.2.2:
- Fixed a problem with the shield projector doing damage on 1.19.3

1.19.1-5.2.1:
- The shape card and space chamber gui works again in 1.19.3

1.19.1-5.2.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3

1.19.1-5.1.1:
- Server side problem

1.19.1-5.1.0:
- The Mover!

1.19.1-5.0.4:
- When the Builder encounters a block that it can't possibly harvest because it's hardness/power exceeds the maximum power of the Builder then it will skip this block

1.19.1-5.0.3:
- Fixed a server side problem with shape cards

1.19.1-5.0.2:
- Shapecard height was still limited to 256
- Fixed keybindings

1.19.1-5.0.1:
- Fix for 1.19.1

1.19-5.0.0:
- Port to 1.19

1.18-4.0.13:
- Fixed a problem with the builder when copying a wither structure it would duplicate one wither skull
- Blocks with the tag 'dontremoveme' didn't let the Builder consume power
- Fixed the shield not updating when redstone is toggled

1.18-4.0.12:
- Fixed a problem on servers

1.18-4.0.11:
- Added a new block tag rftoolsbuilder:dontremoveme which the Builder will respect and in which case the Builder will not remove the block (or replace with dirt)

1.18-4.0.10:
- Fixed the support block causing blocks to be placed wrong in copy mode. Support blocks now have material STRUCTURAL_AIR
- Fixed the translated name for the support block

1.18-4.0.9:
- When manually clearing builder support blocks they will now also check diagonally
- To prevent support blocks from not being cleared support mode is now automatically disabled when changing the settings on the shape card

1.18-4.0.8:
- Port to 1.18.2

1.18-4.0.7:
- Fixed a bug with the shield on some locales (Turkish)

1.18-4.0.6:
- Fix where preview of the support blocks would break due to wrong side

1.18-4.0.5: