@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a potential crash with the mover
+
 1.19-5.2.5:
 - There was still an issue with the shape card not accepting heights more than 256
 
